--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="csci310.plshireus.org.kindler.MainActivity">
 
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addBookButton"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/add"
+            android:layout_margin="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/swipeCardsView"
+            android:layout_marginBottom="16dp"/>
+
     <com.huxq17.swipecardsview.SwipeCardsView
         android:id="@+id/swipeCardsView"
         android:background="#f3f3f3"
